preparation for class work

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
               </tr>
             </table>
           </div>
-          <button class="modal-btn services-modal-btn" type="button">онлайн-запись</button>
+          <button class="modal-btn modal-btn-theme-dark services-modal-btn" type="button">
+            онлайн-запись
+          </button>
         </div>
       </section>
       <!-- ADVANTAGES -->
