--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     <ul class="team-list list">
       <li class="team-list-item">
         <a href="#" class="team-list-link-wrapper link">
-          <img src="./images/teammate-1.jpg" alt="teammate Khalil" class="team-list-item-img" />
+          <div class="team-list-img-wrapper">
+            <img src="./images/teammate-1.jpg" alt="teammate Khalil" class="team-list-item-img" />
+            <p class="overlay">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, beatae. Lorem ipsum
+              dolor sit amet consectetur, adipisicing elit. Molestiae, porro quas. Molestias,
+              recusandae iusto ad debitis officiis saepe laboriosam sequi impedit mollitia commodi
+              itaque, nulla expedita repudiandae fugit! Dolore, voluptatum! Eos adipisci harum sed
+              facere, nemo voluptatibus tempora voluptas dolore ipsam quos? Qui esse ut voluptates
+              odio saepe ullam molestias illo! Nemo, veritatis? Mollitia cum debitis vero velit
+              voluptatem placeat! Neque explicabo voluptatibus iste. Labore, provident aperiam. Fuga
+              reiciendis consequatur dolor velit tempora fugit maiores, distinctio animi
+              necessitatibus autem cum facere in sit optio consectetur inventore suscipit similique
+              provident eveniet! Quod, dolores nobis sit adipisci voluptate temporibus laboriosam
+              culpa soluta commodi, velit ipsum placeat facere aspernatur possimus distinctio autem.
+              Id aspernatur facere et nulla delectus mollitia, consectetur sint hic quos.
+            </p>
+          </div>
           <div class="team-list-content">
             <h3 class="team-list-item-name">Md. Khalil Uddin</h3>
             <p class="team-list-item-position">Head of Ideas</p>
