--- a/index.html
+++ b/index.html
@@ -43,16 +43,48 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobile-menu-open" data-menu-open>
+          <svg class="mobile-menu-open__icon" width="40" height="40">
+            <use href="./images/sprite.svg#burger-icon"></use>
+          </svg>
+        </button>
         <a class="contact-phone-number link" href="tel:+380441111111">+38 044 111 11 11</a>
-        <button class="modal-btn modal-btn-theme-dark" type="button" data-modal-open>
+        <button
+          class="modal-btn modal-btn-theme-dark page-header__modal-btn"
+          type="button"
+          data-modal-open
+        >
           онлайн-запись
         </button>
+      </div>
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu__container">
+          <button class="mobile-menu__close-btn" data-menu-close>
+            <svg class="mobile-menu__close-icon" width="40" height="40">
+              <use href="./images/sprite.svg#close-modal"></use>
+            </svg>
+          </button>
+          <ul>
+            <li>
+              <a href="">link-1</a>
+            </li>
+            <li>
+              <a href="">link-2</a>
+            </li>
+            <li>
+              <a href="">link-3</a>
+            </li>
+            <li>
+              <a href="">link-4</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <main>
       <!-- HERO -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <div class="hero-left-side">
             <ul class="media-list hero-media-list list">
@@ -72,9 +104,9 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- ABOUT -->
-      <section class="about section" id="about">
+      <!-- <section class="about section" id="about">
         <div class="container about-container">
           <div class="about-left-side">
             <ul class="about-gallery list">
@@ -115,9 +147,9 @@
             <button class="modal-btn modal-btn-theme-light" type="button">онлайн-запись</button>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- SERVICES -->
-      <section class="services section" id="services">
+      <!-- <section class="services section" id="services">
         <div class="container">
           <p class="suptitle suptitle_theme_dark">Проведи время в компании лучших мастеров</p>
           <h2 class="title title-theme-dark">Услуги и цены</h2>
@@ -163,9 +195,9 @@
             онлайн-запись
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- ADVANTAGES -->
-      <section class="advantages section">
+      <!-- <section class="advantages section">
         <div class="container advantages-container">
           <div class="advantages-left-side">
             <ul class="advantages-list list">
@@ -198,9 +230,9 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- EMPLOYEES -->
-      <section class="employees-section section" id="our-team">
+      <!-- <section class="employees-section section" id="our-team">
         <div class="container">
           <p class="suptitle suptitle_theme_light">для настоящих ценителей атмосферы</p>
           <h2 class="title title-theme-light employees-title">Наши мастера</h2>
@@ -336,9 +368,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- GALLERY -->
-      <section class="gallery section">
+      <!-- <section class="gallery section">
         <div class="container">
           <h2 hidden>галерея работ</h2>
           <p class="suptitle suptitle_theme_light gallery-suptitle">
@@ -383,14 +415,14 @@
             </li>
           </ul>
         </div>
-      </section>
-      <div id="contacts">
-        <!-- CONTACT FORM -->
-        <section class="contact-form-section">
+      </section> -->
+      <!-- <div id="contacts"> -->
+      <!-- CONTACT FORM -->
+      <!-- <section class="contact-form-section">
           <h2 class="title">Онлайн-запись</h2>
-        </section>
-        <!-- CONTACT INFORMATION -->
-        <section class="contact-info-section">
+        </section> -->
+      <!-- CONTACT INFORMATION -->
+      <!-- <section class="contact-info-section">
           <h2 class="title">Контакты</h2>
           <address>
             <ul class="contact-list list">
@@ -414,11 +446,11 @@
           </address>
           <h3 class="suptitle">время работы</h3>
           <p class="contact-info-date">Ежедневно с 9:00 до 22:00</p>
-        </section>
-      </div>
+        </section> -->
+      <!-- </div> -->
     </main>
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <p class="copyright">&copy; Copyright 2020</p>
         <ul class="media-list list">
@@ -430,9 +462,9 @@
           </li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="18" height="18">
@@ -489,8 +521,9 @@
           <button type="submit" class="modal-form-submit">отправить</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
